[package]
name = "tgpipe"
version = "0.1.0"
authors = ["Andrew"]
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.1.23"
log = "0.4.6"
dotenv = "0.13.0"
env_logger = "0.6.0"
tokio = { version = "0.1.7", default-features = false }
carapax = { git = "https://github.com/tg-rs/carapax.git" }
